# DjangoRESTFramework

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_preview_alter_lesson_preview.py  0003_course_owner_lesson_owner.py  0004_subscription.py
fixtures/: courses.json
users/: models.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: csu.py  loading_payments.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_payment_delete_payments.py
